--- a/src/main.css
+++ b/src/main.css
@@ -501,3 +501,9 @@ figure.snip1390 .profile {
   margin-bottom: 10px;
   border: solid 5px rgba(2,54,127,1);
 }
+
+
+.slider2{
+    width: 100%;
+    overflow-x: hidden;
+}
